# workflow

./: .dockerignore  .env.example  .gitignore  Dockerfile  pyproject.toml  pyrightconfig.json
app/: container.py  main.py  migrate.py
app/adapters/inbound/amqp/: consumer.py
app/adapters/inbound/http/: conditions_router.py  edges_router.py  exception_handlers.py  (+5 more)
app/domain/: exceptions.py
app/domain/entities/: funnel.py  orchestration.py  workflow.py
app/domain/events/: __init__.py  base.py
app/domain/services/: debounce.py  inbound_transformer.py  outbound_transformer.py  session.py
app/infrastructure/config/: __init__.py  settings.py
app/infrastructure/database/: postgres_connection.py
app/infrastructure/messaging/: rabbitmq_connection.py
app/ports/: __init__.py
app/ports/inbound/: message_handler.py
app/ports/outbound/: condition_repository.py  edge_repository.py  execution_repository.py  message_publisher.py  node_repository.py  pending_message_repository.py  property_repository.py  session_repository.py  tenant_repository.py  workflow_repository.py
app/workers/: __init__.py  channel_inbound.py  cognition_response.py  debounce_flush.py  runner.py
migrations/: 001_initial.sql  002_funnel.sql  003_tenants_contacts_executions.sql  004_sessions_tenant_contact_fk.sql  005_nodes_schema_evolution.sql  006_executions_selected_edge.sql  007_executions_justification_confidence.sql  008_many_to_many_relations.sql  009_drop_inline_edge_conditions.sql  010_workflows.sql  011_edges_drop_workflow_id.sql  012_drop_workflow_id_conditions_properties.sql
(+12 files in other folders)
