[project]
name = "workflow"
version = "0.1.0"
description = ""
authors = [
    {name = "MuriloEduardo",email = "muriloeduardoooooo@gmail.com"}
]
requires-python = ">=3.12,<4.0"
dependencies = [
    "aio-pika (>=9.6.2,<10.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "pydantic (>=2.13.2,<3.0.0)",
    "structlog (>=25.5.0,<26.0.0)",
    "tenacity (>=9.1.4,<10.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "uvicorn (>=0.44.0,<0.45.0)",
    "fastapi (>=0.136.0,<0.137.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.scripts]
migrate = "app.migrate:main"


[dependency-groups]
dev = [
    "ruff (>=0.15.11,<0.16.0)",
    "black (>=26.3.1,<27.0.0)"
]
